vertical scrollbar fix

--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -10,7 +10,7 @@ body,
 // }
 
 .page {
-  min-height: calc(100% - 185px);
+  min-height: calc(100% - 200px); // temp fix. sending a flexbox rewrite in sometime.
 }
 
 .text-bold {
